feat: implement user when create
