# cmd/comment/doc/swagger.json
@@ -250,8 +250,7 @@
             "type": "object",
             "required": [
                 "commentMessage",
-                "exhibitionId",
-                "userId"
+                "exhibitionId"
             ],
             "properties": {
                 "commentMessage": {
@@ -266,8 +265,8 @@
                 "updateDateAt": {
                     "type": "integer"
                 },
-                "userId": {
-                    "type": "string"
+                "user": {
+                    "$ref": "#/definitions/model.User"
                 }
             }
         },
@@ -282,6 +281,23 @@
                 },
                 "updateDateAt": {
                     "type": "integer"
+                }
+            }
+        },
+        "model.User": {
+            "type": "object",
+            "properties": {
+                "firstname": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "lastname": {
+                    "type": "string"
+                },
+                "profile": {
+                    "type": "string"
                 }
             }
         }
