# handler/commenthandler/create-comment.go
@@ -8,30 +8,29 @@ import (
 	"go.mongodb.org/mongo-driver/bson/primitive"
 )
 
-//	@Summary		Create a new comment
-//	@Description	Create a new comment
-//	@Tags			Comments
-//	@Security		BearerAuth
-//	@ID				CreateComment
-//	@Accept			json
-//	@Produce		json
-//	@Param			requestExhibition	body	model.RequestCreateComment	true	"Comment data to create"
-//	@Success		201
-//	@Failure		400
-//	@Failure		401
-//	@Failure		404
-//	@Failure		500
-//	@Router			/api/comments [post]
+// @Summary		Create a new comment
+// @Description	Create a new comment
+// @Tags			Comments
+// @Security		BearerAuth
+// @ID				CreateComment
+// @Accept			json
+// @Produce		json
+// @Param			requestExhibition	body	model.RequestCreateComment	true	"Comment data to create"
+// @Success		201
+// @Failure		400
+// @Failure		401
+// @Failure		404
+// @Failure		500
+// @Router			/api/comments [post]
 func (h *CommentHandler) CreateComment(c *gin.Context) {
-	// Get the value of user_id and check if it exists in the context
-	userIDInterface, exists := c.Get("user_id")
-	if !exists {
-		c.JSON(http.StatusUnauthorized, gin.H{"error": "user not authenticated"})
-		return
-	}
+	// Get user information from request context
+	userID, _ := c.Get("user_id")
+	firstName, _ := c.Get("user_first_name")
+	lastName, _ := c.Get("user_last_name")
+	profileImage, _ := c.Get("user_image")
 
-	// Convert the value of user_id to primitive.ObjectID
-	userID, ok := userIDInterface.(primitive.ObjectID)
+	// Convert user ID to primitive.ObjectID
+	userIDObj, ok := userID.(primitive.ObjectID)
 	if !ok {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": "user_id is not a valid ObjectID"})
 		return
@@ -44,8 +43,16 @@ func (h *CommentHandler) CreateComment(c *gin.Context) {
 		return
 	}
 
+	// Populate User field with user information
+	reqBody.User = model.User{
+		ID:           userIDObj,
+		FirstName:    firstName.(string),
+		LastName:     lastName.(string),
+		ProfileImage: profileImage.(string),
+	}
+
 	// Call CreateComment method with userID
-	commentID, err := h.Service.CreateComment(c, userID, &reqBody)
+	commentID, err := h.Service.CreateComment(c, userIDObj, &reqBody)
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
